--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- this is my change -->
+<!-- unresolved class MovieFragment -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="@color/Gray"
     android:orientation="vertical"
-    tools:context=".MovieFragment">
+    tools:context="fragment.MovieFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
