--- a/app/src/main/res/layout/fragment_tvshow.xml
+++ b/app/src/main/res/layout/fragment_tvshow.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="@color/Gray"
     android:orientation="vertical"
-    tools:context="fragment.TVShowFragment">
+    tools:context="fragment.TvShowFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_tvshow"
